# economic-topology-warning

./: .gitignore  LICENSE  README.md  README.zh-CN.md  STORY_BRIEF.md  demo.py  pyproject.toml
data/: sp500_representative_topology_2007_2009.csv
data/multi_crisis/: summary.csv
data/multi_crisis/risk_reports/: covid_2020_risk_report.txt  dotcom_2000_risk_report.txt  euro_debt_2011_risk_report.txt  gfc_2008_risk_report.txt
econ_topology/: __init__.py  analyzer.py  phase_dynamics.py
scripts/: live_forecast.py  multi_crisis_backtest.py  sp500_2008_backtest.py
tests/: test_analyzer.py
